# learnopengl

./: .ccls  .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
glm/: main.cpp
shaders/: basic.frag  basic.vert  wood_panel.frag  wood_panel.vert
src/: camera.hpp  gl_debug.cpp  gl_debug.hpp  main.cpp  shader.cpp  shader.hpp  texture.hpp
triplets/: x64-linux.cmake
